// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accruals getAccrualsData should retrieve all data when viewing a date in the agreement range 1`] = `
"<div>
  <h1 data-testid=\\"accruals-balance-title\\" class=\\"govuk-caption-m\\">My accruals balance as of</h1>
  <h2 data-testid=\\"accruals-date\\" class=\\"govuk-heading-m\\">1 April 2023</h2>
  <div class=\\"govuk-button-group button-group-row\\"><a class=\\"govuk-link govuk-link--no-visited-state\\" href=\\"/accruals/2023-03-31\\">Previous day</a><a class=\\"govuk-link govuk-link--no-visited-state\\" href=\\"/accruals/2023-04-02\\">Next day</a></div>
  <div class=\\"accruals-data\\">
    <div class=\\"accruals-container\\">
      <form class=\\"grey-border\\">
        <h1 class=\\"govuk-heading-m newline\\"><span data-testid=\\"annualTargetHours-title-span\\">Annual target hours
 <strong>2182</strong> remaining</span></h1>
        <table class=\\"govuk-table\\">
          <tbody class=\\"govuk-table__body\\">
            <tr class=\\"govuk-table__row\\">
              <th data-testid=\\"annualTargetHours-total-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Total</th>
              <td data-testid=\\"annualTargetHours-total-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2192:00</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th data-testid=\\"annualTargetHours-worked-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Worked</th>
              <td data-testid=\\"annualTargetHours-worked-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">10:00</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th data-testid=\\"annualTargetHours-remaining-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Remaining</th>
              <td data-testid=\\"annualTargetHours-remaining-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2182:00</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th data-testid=\\"annualTargetHours-target-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Target</th>
              <td data-testid=\\"annualTargetHours-target-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2186:00</td>
            </tr>
          </tbody>
        </table>
      </form>
    </div>
  </div>
</div>"
`;

exports[`Accruals getAccrualsData should retrieve no data when viewing a date outside the agreement range 1`] = `
"<div>
  <h1 data-testid=\\"accruals-balance-title\\" class=\\"govuk-caption-m\\">My accruals balance as of</h1>
  <h2 data-testid=\\"accruals-date\\" class=\\"govuk-heading-m\\">8 April 2023</h2>
  <div class=\\"govuk-button-group button-group-row\\"><a class=\\"govuk-link govuk-link--no-visited-state\\" href=\\"/accruals/2023-04-07\\">Previous day</a><a class=\\"govuk-link govuk-link--no-visited-state\\" href=\\"/accruals/2023-04-09\\">Next day</a></div>
  <div class=\\"accruals-data\\">
    <div class=\\"accruals-container\\">
      <form class=\\"grey-border\\">
        <h1 class=\\"govuk-heading-m newline\\">No agreement has been found</h1>
        <table class=\\"govuk-table\\">
          <tbody class=\\"govuk-table__body\\">
            <tr class=\\"govuk-table__row\\">
              <th data-testid=\\"null-total-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Total</th>
              <td data-testid=\\"null-total-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th data-testid=\\"null-worked-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Worked</th>
              <td data-testid=\\"null-worked-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th data-testid=\\"null-remaining-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Remaining</th>
              <td data-testid=\\"null-remaining-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th data-testid=\\"null-target-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Target</th>
              <td data-testid=\\"null-target-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
            </tr>
          </tbody>
        </table>
      </form>
    </div>
  </div>
</div>"
`;

exports[`Accruals getAccrualsData should show no data found when there is no agreement data 1`] = `
"<div>
  <h1 data-testid=\\"accruals-balance-title\\" class=\\"govuk-caption-m\\">My accruals balance as of</h1>
  <h2 data-testid=\\"accruals-date\\" class=\\"govuk-heading-m\\">7 April 2023</h2>
  <div class=\\"govuk-button-group button-group-row\\"><a class=\\"govuk-link govuk-link--no-visited-state\\" href=\\"/accruals/2023-04-06\\">Previous day</a><a class=\\"govuk-link govuk-link--no-visited-state\\" href=\\"/accruals/2023-04-08\\">Next day</a></div>
  <div class=\\"accruals-data\\">
    <div class=\\"accruals-container\\">
      <form class=\\"grey-border\\">
        <h1 class=\\"govuk-heading-m newline\\">No agreement has been found</h1>
        <table class=\\"govuk-table\\">
          <tbody class=\\"govuk-table__body\\">
            <tr class=\\"govuk-table__row\\">
              <th data-testid=\\"null-total-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Total</th>
              <td data-testid=\\"null-total-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th data-testid=\\"null-worked-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Worked</th>
              <td data-testid=\\"null-worked-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th data-testid=\\"null-remaining-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Remaining</th>
              <td data-testid=\\"null-remaining-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th data-testid=\\"null-target-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Target</th>
              <td data-testid=\\"null-target-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
            </tr>
          </tbody>
        </table>
      </form>
    </div>
  </div>
</div>"
`;
